--- a/MASH-dev/DavidSmith/states2bionomics.tex
+++ b/MASH-dev/DavidSmith/states2bionomics.tex
@@ -38,37 +38,37 @@
 \usepackage{framed}
 \definecolor{shadecolor}{RGB}{248,248,248}
 \newenvironment{Shaded}{\begin{snugshade}}{\end{snugshade}}
-\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{{#1}}}}
-\newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{{#1}}}
-\newcommand{\DecValTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{{#1}}}
-\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{{#1}}}
-\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{{#1}}}
-\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{{#1}}}
-\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{{#1}}}
-\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{{#1}}}
-\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{{#1}}}
-\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{{#1}}}
-\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{{#1}}}
-\newcommand{\ImportTok}[1]{{#1}}
-\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{{#1}}}}
-\newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{{#1}}}}}
-\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{{#1}}}}}
-\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{{#1}}}}}
-\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{{#1}}}
-\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{{#1}}}
-\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{{#1}}}
-\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{{#1}}}}
-\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{{#1}}}}
-\newcommand{\BuiltInTok}[1]{{#1}}
-\newcommand{\ExtensionTok}[1]{{#1}}
-\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{{#1}}}}
-\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{{#1}}}
-\newcommand{\RegionMarkerTok}[1]{{#1}}
-\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{{#1}}}}}
-\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{{#1}}}}}
-\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{{#1}}}
-\newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{{#1}}}}
-\newcommand{\NormalTok}[1]{{#1}}
+\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
+\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
+\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\BuiltInTok}[1]{#1}
+\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{#1}}
+\newcommand{\DecValTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{#1}}}
+\newcommand{\ExtensionTok}[1]{#1}
+\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ImportTok}[1]{#1}
+\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\NormalTok}[1]{#1}
+\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
+\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
+\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\RegionMarkerTok}[1]{#1}
+\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
 \usepackage{graphicx,grffile}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
@@ -113,22 +113,22 @@
 }
 
 \setlength{\droptitle}{-2em}
-
   \title{From State Transitions and Waiting Times to Bionomics}
-    \pretitle{\vspace{\droptitle}\centering\huge}
+  \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
-    \author{David L Smith}
-    \preauthor{\centering\large\emph}
+  \author{David L Smith}
+  \preauthor{\centering\large\emph}
   \postauthor{\par}
-      \predate{\centering\large\emph}
+  \predate{\centering\large\emph}
   \postdate{\par}
-    \date{6/8/2018}
+  \date{6/8/2018}
 
 
 \begin{document}
 \maketitle
 
-\subsection{Background}\label{background}
+\hypertarget{background}{%
+\subsection{Background}\label{background}}
 
 Under some restricted conditions on waiting times, MBITES is what we
 would get if we translated MBITES into a stochastic model, under the
@@ -170,14 +170,16 @@ P_{F,D} & P_{B,D} & P_{R,D} & P_{L,D} & P_{O,D} & 0
 \end{array}\right] \left[ \begin{array}{c}F/t_F\\B/t_B\\R/t_R\\L/t_R\\O/t_O \\D   \\ \end{array}\right] 
 \]
 
-\subsubsection{With Search}\label{with-search}
+\hypertarget{with-search}{%
+\subsubsection{With Search}\label{with-search}}
 
 With search, we can consider these same paths from \(R\) back to \(R\)
 but with the more complicated problem of having repeated attempts to
 search before successfully completing an attempt.
 
+\hypertarget{transitions-from-f-to-b}{%
 \paragraph{\texorpdfstring{\emph{Transitions from F to
-B}}{Transitions from F to B}}\label{transitions-from-f-to-b}
+B}}{Transitions from F to B}}\label{transitions-from-f-to-b}}
 
 The state transitions from \(F\) are \(F\rightarrow {F,B,D}\), The
 overall probability of going from \(F\) to \(B\) can be computed in two
@@ -194,7 +196,7 @@ we use the second method, in part, because it is more concise.
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{Psi_FB =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{P_FB/(}\DecValTok{1}\NormalTok{-P_FF)\})\} }
+\NormalTok{Psi_FB =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{P_FB}\OperatorTok{/}\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_FF)\})\} }
 \end{Highlighting}
 \end{Shaded}
 
@@ -203,13 +205,13 @@ Similarly, the waiting time is:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{T_FB =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{tF/(}\DecValTok{1}\NormalTok{-P_FF)\})\}}
+\NormalTok{T_FB =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{tF}\OperatorTok{/}\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_FF)\})\}}
 \end{Highlighting}
 \end{Shaded}
 
 Similarly, the probability of dying is:
-\[\Psi_{F,D} = \frac{P_{F,D}}{(1-P_{F,F})}.\] The expected waiting time
-to die is (similarly): \[T_{F,D} = \frac{T_F}{(1-P_{F,F})}.\] \#\#\#\#
+\[\Psi_{F,D} = \frac{P_{F,D}}{(1-P_{F,F})}\] The expected waiting time
+to die is (similarly): \[T_{F,D} = \frac{T_F}{(1-P_{F,F})}\] \#\#\#\#
 \emph{Transitions from B to R}
 
 The transitions from \(B\) are \(B\rightarrow {F,B,R,D}\). The overall
@@ -222,8 +224,8 @@ which gives us:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{Psi_BR =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
-  \NormalTok{P_BR/(}\DecValTok{1}\NormalTok{-P_BB-P_BF*}\KeywordTok{Psi_FB}\NormalTok{(PAR))}
+\NormalTok{Psi_BR =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
+\NormalTok{  P_BR}\OperatorTok{/}\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_BB}\OperatorTok{-}\NormalTok{P_BF}\OperatorTok{*}\KeywordTok{Psi_FB}\NormalTok{(PAR))}
 \NormalTok{\})\}}
 \end{Highlighting}
 \end{Shaded}
@@ -234,14 +236,15 @@ T_{B,R} = T_B + P_{B,B} T_{B,R} + P_{B,F} \Psi_{F,B} \left(T_{F,B} +  T_{B,R} \r
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{T_BR =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
-  \NormalTok{(tB+P_BF*}\KeywordTok{Psi_FB}\NormalTok{(PAR)*}\KeywordTok{T_FB}\NormalTok{(PAR))/(}\DecValTok{1}\NormalTok{-P_BB-P_BF*}\KeywordTok{Psi_FB}\NormalTok{(PAR))}
+\NormalTok{T_BR =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
+\NormalTok{  (tB}\OperatorTok{+}\NormalTok{P_BF}\OperatorTok{*}\KeywordTok{Psi_FB}\NormalTok{(PAR)}\OperatorTok{*}\KeywordTok{T_FB}\NormalTok{(PAR))}\OperatorTok{/}\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_BB}\OperatorTok{-}\NormalTok{P_BF}\OperatorTok{*}\KeywordTok{Psi_FB}\NormalTok{(PAR))}
 \NormalTok{\})\}}
 \end{Highlighting}
 \end{Shaded}
 
+\hypertarget{transitions-from-f-to-r}{%
 \paragraph{\texorpdfstring{\emph{Transitions from F to
-R}}{Transitions from F to R}}\label{transitions-from-f-to-r}
+R}}{Transitions from F to R}}\label{transitions-from-f-to-r}}
 
 The logic is such that the time from \(B\) to \(R\) includes the loop
 back into \(F\), so the time from \(F\) to \(R\) is simply the sum of
@@ -249,14 +252,15 @@ the two times:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{T_FR =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
-  \KeywordTok{T_FB}\NormalTok{(PAR) +}\StringTok{ }\KeywordTok{T_BR}\NormalTok{(PAR)}
+\NormalTok{T_FR =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
+  \KeywordTok{T_FB}\NormalTok{(PAR) }\OperatorTok{+}\StringTok{ }\KeywordTok{T_BR}\NormalTok{(PAR)}
 \NormalTok{\})\}}
 \end{Highlighting}
 \end{Shaded}
 
+\hypertarget{transitions-from-l-to-o}{%
 \paragraph{\texorpdfstring{\emph{Transitions from L to
-O}}{Transitions from L to O}}\label{transitions-from-l-to-o}
+O}}{Transitions from L to O}}\label{transitions-from-l-to-o}}
 
 Similarly, the state transitions from \(L\) are
 \(L \rightarrow {L,O,D}\), and from \(O\) are
@@ -268,8 +272,8 @@ The overall probability of going from \(L\) to \(O\) is: \[
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{Psi_LO =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
-  \NormalTok{P_LO/(}\DecValTok{1}\NormalTok{-P_LL)}
+\NormalTok{Psi_LO =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
+\NormalTok{  P_LO}\OperatorTok{/}\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_LL)}
 \NormalTok{\})\}}
 \end{Highlighting}
 \end{Shaded}
@@ -279,14 +283,15 @@ The waiting time is:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{T_LO =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
-  \NormalTok{tL/(}\DecValTok{1}\NormalTok{-P_LL)}
+\NormalTok{T_LO =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
+\NormalTok{  tL}\OperatorTok{/}\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_LL)}
 \NormalTok{\})\}}
 \end{Highlighting}
 \end{Shaded}
 
+\hypertarget{transitions-from-o-to-fb}{%
 \paragraph{\texorpdfstring{\emph{Transitions from O to
-F/B}}{Transitions from O to F/B}}\label{transitions-from-o-to-fb}
+F/B}}{Transitions from O to F/B}}\label{transitions-from-o-to-fb}}
 
 The probability of going from \(O\) to \(F\) or \(B\) is:
 \[\Psi_{O,F|B} = P_{O,F} + P_{O,B} + \left(P_{O,O} + P_{O,L} \Psi_{L,O} \right) \Psi_{O,F|B} \]
@@ -295,12 +300,12 @@ The probability of going from \(O\) to \(F\) or \(B\) is:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{Psi_OF =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
-  \NormalTok{P_OF/(}\DecValTok{1}\NormalTok{-P_OO-P_OL*}\KeywordTok{Psi_LO}\NormalTok{(PAR))}
+\NormalTok{Psi_OF =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
+\NormalTok{  P_OF}\OperatorTok{/}\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_OO}\OperatorTok{-}\NormalTok{P_OL}\OperatorTok{*}\KeywordTok{Psi_LO}\NormalTok{(PAR))}
 \NormalTok{\})\}}
 
-\NormalTok{Psi_OB =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
-  \NormalTok{P_OB/(}\DecValTok{1}\NormalTok{-P_OO-P_OL*}\KeywordTok{Psi_LO}\NormalTok{(PAR))}
+\NormalTok{Psi_OB =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
+\NormalTok{  P_OB}\OperatorTok{/}\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_OO}\OperatorTok{-}\NormalTok{P_OL}\OperatorTok{*}\KeywordTok{Psi_LO}\NormalTok{(PAR))}
 \NormalTok{\})\}}
 \end{Highlighting}
 \end{Shaded}
@@ -315,37 +320,38 @@ T_{O,F|B}= \frac{T_O  + P_{O,L} \Psi_{L,O} T_{L,O}}{1 - P_{O,O} - P_{O,L} \Psi_{
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{T_OFB =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
-  \NormalTok{(tO +}\StringTok{ }\NormalTok{P_OL*}\KeywordTok{Psi_LO}\NormalTok{(PAR)*}\KeywordTok{T_LO}\NormalTok{(PAR))/(}\DecValTok{1}\NormalTok{-P_OO-P_OL*}\KeywordTok{Psi_LO}\NormalTok{(PAR))}
+\NormalTok{T_OFB =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
+\NormalTok{  (tO }\OperatorTok{+}\StringTok{ }\NormalTok{P_OL}\OperatorTok{*}\KeywordTok{Psi_LO}\NormalTok{(PAR)}\OperatorTok{*}\KeywordTok{T_LO}\NormalTok{(PAR))}\OperatorTok{/}\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_OO}\OperatorTok{-}\NormalTok{P_OL}\OperatorTok{*}\KeywordTok{Psi_LO}\NormalTok{(PAR))}
 \NormalTok{\})\}}
 \end{Highlighting}
 \end{Shaded}
 
+\hypertarget{the-length-of-a-feeding-cycle}{%
 \subsubsection{The Length of a Feeding
-Cycle}\label{the-length-of-a-feeding-cycle}
+Cycle}\label{the-length-of-a-feeding-cycle}}
 
 Survival through a full feeding cycle is:
 \[\Psi_{R,R} = \sum_{X \neq \left\{R,D\right\}} P_{R,X} \Psi_{X,R}\]
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{Psi_FR =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
-  \KeywordTok{Psi_FB}\NormalTok{(PAR)*}\KeywordTok{Psi_BR}\NormalTok{(PAR)}
+\NormalTok{Psi_FR =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
+  \KeywordTok{Psi_FB}\NormalTok{(PAR)}\OperatorTok{*}\KeywordTok{Psi_BR}\NormalTok{(PAR)}
 \NormalTok{\})\} }
 
-\NormalTok{Psi_OR =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
-  \KeywordTok{Psi_OF}\NormalTok{(PAR)*}\KeywordTok{Psi_FR}\NormalTok{(PAR)+}\KeywordTok{Psi_OB}\NormalTok{(PAR)*}\KeywordTok{Psi_BR}\NormalTok{(PAR)}
+\NormalTok{Psi_OR =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
+  \KeywordTok{Psi_OF}\NormalTok{(PAR)}\OperatorTok{*}\KeywordTok{Psi_FR}\NormalTok{(PAR)}\OperatorTok{+}\KeywordTok{Psi_OB}\NormalTok{(PAR)}\OperatorTok{*}\KeywordTok{Psi_BR}\NormalTok{(PAR)}
 \NormalTok{\})\}}
 
-\NormalTok{Psi_LR =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
-  \KeywordTok{Psi_LO}\NormalTok{(PAR)*}\KeywordTok{Psi_OR}\NormalTok{(PAR)}
+\NormalTok{Psi_LR =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
+  \KeywordTok{Psi_LO}\NormalTok{(PAR)}\OperatorTok{*}\KeywordTok{Psi_OR}\NormalTok{(PAR)}
 \NormalTok{\})\}}
 
-\NormalTok{Psi_RR =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
-  \NormalTok{P_RF*}\KeywordTok{Psi_FR}\NormalTok{(PAR)+}
-\StringTok{  }\NormalTok{P_RB*}\KeywordTok{Psi_BR}\NormalTok{(PAR)+}
-\StringTok{  }\NormalTok{P_RL*}\KeywordTok{Psi_LR}\NormalTok{(PAR)+}
-\StringTok{  }\NormalTok{P_RO*}\KeywordTok{Psi_OR}\NormalTok{(PAR)}
+\NormalTok{Psi_RR =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
+\NormalTok{  P_RF}\OperatorTok{*}\KeywordTok{Psi_FR}\NormalTok{(PAR)}\OperatorTok{+}
+\StringTok{  }\NormalTok{P_RB}\OperatorTok{*}\KeywordTok{Psi_BR}\NormalTok{(PAR)}\OperatorTok{+}
+\StringTok{  }\NormalTok{P_RL}\OperatorTok{*}\KeywordTok{Psi_LR}\NormalTok{(PAR)}\OperatorTok{+}
+\StringTok{  }\NormalTok{P_RO}\OperatorTok{*}\KeywordTok{Psi_OR}\NormalTok{(PAR)}
 \NormalTok{\})\}}
 \end{Highlighting}
 \end{Shaded}
@@ -355,24 +361,24 @@ The average length of a feeding cycle is:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{T_OR =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
-  \KeywordTok{T_OFB}\NormalTok{(PAR) +}\StringTok{ }\NormalTok{P_OB/(P_OB+P_OF)*}\KeywordTok{T_BR}\NormalTok{(PAR)+}\StringTok{ }\NormalTok{P_OF/(P_OB+P_OF)*}\KeywordTok{T_FR}\NormalTok{(PAR)}
+\NormalTok{T_OR =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
+  \KeywordTok{T_OFB}\NormalTok{(PAR) }\OperatorTok{+}\StringTok{ }\NormalTok{P_OB}\OperatorTok{/}\NormalTok{(P_OB}\OperatorTok{+}\NormalTok{P_OF)}\OperatorTok{*}\KeywordTok{T_BR}\NormalTok{(PAR)}\OperatorTok{+}\StringTok{ }\NormalTok{P_OF}\OperatorTok{/}\NormalTok{(P_OB}\OperatorTok{+}\NormalTok{P_OF)}\OperatorTok{*}\KeywordTok{T_FR}\NormalTok{(PAR)}
 \NormalTok{\})\}}
 
-\NormalTok{T_LR =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
-  \KeywordTok{T_LO}\NormalTok{(PAR) +}\StringTok{ }\KeywordTok{T_OR}\NormalTok{(PAR)}
+\NormalTok{T_LR =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
+  \KeywordTok{T_LO}\NormalTok{(PAR) }\OperatorTok{+}\StringTok{ }\KeywordTok{T_OR}\NormalTok{(PAR)}
 \NormalTok{\})\}}
 \end{Highlighting}
 \end{Shaded}
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{T_RR =}\StringTok{ }\NormalTok{function(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
-  \NormalTok{(tR +}
-\StringTok{  }\NormalTok{P_RF*}\KeywordTok{T_FR}\NormalTok{(PAR)+}
-\StringTok{  }\NormalTok{P_RB*}\KeywordTok{T_BR}\NormalTok{(PAR)+}
-\StringTok{  }\NormalTok{P_RL*}\KeywordTok{T_LR}\NormalTok{(PAR)+}
-\StringTok{  }\NormalTok{P_RO*}\KeywordTok{T_OR}\NormalTok{(PAR))}
+\NormalTok{T_RR =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR)\{}\KeywordTok{with}\NormalTok{(PAR,\{}
+\NormalTok{  (tR }\OperatorTok{+}
+\StringTok{  }\NormalTok{P_RF}\OperatorTok{*}\KeywordTok{T_FR}\NormalTok{(PAR)}\OperatorTok{+}
+\StringTok{  }\NormalTok{P_RB}\OperatorTok{*}\KeywordTok{T_BR}\NormalTok{(PAR)}\OperatorTok{+}
+\StringTok{  }\NormalTok{P_RL}\OperatorTok{*}\KeywordTok{T_LR}\NormalTok{(PAR)}\OperatorTok{+}
+\StringTok{  }\NormalTok{P_RO}\OperatorTok{*}\KeywordTok{T_OR}\NormalTok{(PAR))}
 \NormalTok{\})\}}
 \end{Highlighting}
 \end{Shaded}
@@ -401,7 +407,7 @@ We can check this out by giving some reasonable times:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\KeywordTok{T_RR}\NormalTok{(PAR)/-}\KeywordTok{log}\NormalTok{(}\KeywordTok{Psi_RR}\NormalTok{(PAR))}
+\KeywordTok{T_RR}\NormalTok{(PAR)}\OperatorTok{/-}\KeywordTok{log}\NormalTok{(}\KeywordTok{Psi_RR}\NormalTok{(PAR))}
 \end{Highlighting}
 \end{Shaded}
 
@@ -419,26 +425,22 @@ We can check this out by giving some reasonable times:
 ## Loading required package: deSolve
 \end{verbatim}
 
-\begin{verbatim}
-## Warning: package 'deSolve' was built under R version 3.4.4
-\end{verbatim}
-
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{MBDETES_R2R_ODE =}\StringTok{ }\NormalTok{function(t,X,P)\{}\KeywordTok{with}\NormalTok{(}\KeywordTok{as.list}\NormalTok{(}\KeywordTok{c}\NormalTok{(P,X)),\{}
-  \NormalTok{dR =}\StringTok{ }\NormalTok{-R/tR}
-  \NormalTok{dL =}\StringTok{ }\NormalTok{P_RL*R/tR +}\StringTok{ }\NormalTok{P_OL*O/tO -}\StringTok{ }\NormalTok{(}\DecValTok{1}\NormalTok{-P_LL)*L/tL}
-  \NormalTok{dO =}\StringTok{ }\NormalTok{P_RO*R/tR +}\StringTok{ }\NormalTok{P_LO*L/tL -}\StringTok{ }\NormalTok{(}\DecValTok{1}\NormalTok{-P_OO)*O/tO}
-  \NormalTok{dF =}\StringTok{ }\NormalTok{P_RF*R/tR +}\StringTok{ }\NormalTok{P_OF*O/tO +}\StringTok{ }\NormalTok{P_BF*B/tB -}\StringTok{ }\NormalTok{(}\DecValTok{1}\NormalTok{-P_FF)*FF/tF}
-  \NormalTok{dB =}\StringTok{ }\NormalTok{P_RB*R/tR +}\StringTok{ }\NormalTok{P_OB*O/tO +}\StringTok{ }\NormalTok{P_FB*FF/tF -}\StringTok{ }\NormalTok{(}\DecValTok{1}\NormalTok{-P_BB)*B/tB}
-  \NormalTok{dR2 =}\StringTok{ }\NormalTok{P_BR*B/tB}
-  \NormalTok{dD  =}\StringTok{ }\NormalTok{P_LD*L/tL +}\StringTok{ }\NormalTok{P_OD*O/tO +}\StringTok{ }\NormalTok{P_FD*FF/tF +}\StringTok{ }\NormalTok{P_FD*B/tB +}\StringTok{ }\NormalTok{P_RD*R/tR}
+\NormalTok{MBDETES_R2R_ODE =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(t,X,P)\{}\KeywordTok{with}\NormalTok{(}\KeywordTok{as.list}\NormalTok{(}\KeywordTok{c}\NormalTok{(P,X)),\{}
+\NormalTok{  dR =}\StringTok{ }\OperatorTok{-}\NormalTok{R}\OperatorTok{/}\NormalTok{tR}
+\NormalTok{  dL =}\StringTok{ }\NormalTok{P_RL}\OperatorTok{*}\NormalTok{R}\OperatorTok{/}\NormalTok{tR }\OperatorTok{+}\StringTok{ }\NormalTok{P_OL}\OperatorTok{*}\NormalTok{O}\OperatorTok{/}\NormalTok{tO }\OperatorTok{-}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_LL)}\OperatorTok{*}\NormalTok{L}\OperatorTok{/}\NormalTok{tL}
+\NormalTok{  dO =}\StringTok{ }\NormalTok{P_RO}\OperatorTok{*}\NormalTok{R}\OperatorTok{/}\NormalTok{tR }\OperatorTok{+}\StringTok{ }\NormalTok{P_LO}\OperatorTok{*}\NormalTok{L}\OperatorTok{/}\NormalTok{tL }\OperatorTok{-}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_OO)}\OperatorTok{*}\NormalTok{O}\OperatorTok{/}\NormalTok{tO}
+\NormalTok{  dF =}\StringTok{ }\NormalTok{P_RF}\OperatorTok{*}\NormalTok{R}\OperatorTok{/}\NormalTok{tR }\OperatorTok{+}\StringTok{ }\NormalTok{P_OF}\OperatorTok{*}\NormalTok{O}\OperatorTok{/}\NormalTok{tO }\OperatorTok{+}\StringTok{ }\NormalTok{P_BF}\OperatorTok{*}\NormalTok{B}\OperatorTok{/}\NormalTok{tB }\OperatorTok{-}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_FF)}\OperatorTok{*}\NormalTok{FF}\OperatorTok{/}\NormalTok{tF}
+\NormalTok{  dB =}\StringTok{ }\NormalTok{P_RB}\OperatorTok{*}\NormalTok{R}\OperatorTok{/}\NormalTok{tR }\OperatorTok{+}\StringTok{ }\NormalTok{P_OB}\OperatorTok{*}\NormalTok{O}\OperatorTok{/}\NormalTok{tO }\OperatorTok{+}\StringTok{ }\NormalTok{P_FB}\OperatorTok{*}\NormalTok{FF}\OperatorTok{/}\NormalTok{tF }\OperatorTok{-}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_BB)}\OperatorTok{*}\NormalTok{B}\OperatorTok{/}\NormalTok{tB}
+\NormalTok{  dR2 =}\StringTok{ }\NormalTok{P_BR}\OperatorTok{*}\NormalTok{B}\OperatorTok{/}\NormalTok{tB}
+\NormalTok{  dD  =}\StringTok{ }\NormalTok{P_LD}\OperatorTok{*}\NormalTok{L}\OperatorTok{/}\NormalTok{tL }\OperatorTok{+}\StringTok{ }\NormalTok{P_OD}\OperatorTok{*}\NormalTok{O}\OperatorTok{/}\NormalTok{tO }\OperatorTok{+}\StringTok{ }\NormalTok{P_FD}\OperatorTok{*}\NormalTok{FF}\OperatorTok{/}\NormalTok{tF }\OperatorTok{+}\StringTok{ }\NormalTok{P_FD}\OperatorTok{*}\NormalTok{B}\OperatorTok{/}\NormalTok{tB }\OperatorTok{+}\StringTok{ }\NormalTok{P_RD}\OperatorTok{*}\NormalTok{R}\OperatorTok{/}\NormalTok{tR}
   \KeywordTok{list}\NormalTok{(}\KeywordTok{c}\NormalTok{(dR,dL,dO,dF,dB,dR2))}
 \NormalTok{\})\}}
 
-\NormalTok{MBDETES_R2R_solve =}\StringTok{ }\NormalTok{function(PAR, }\DataTypeTok{mxT=}\DecValTok{20}\NormalTok{, }\DataTypeTok{dt=}\FloatTok{0.001}\NormalTok{)\{}
-  \NormalTok{inits =}\StringTok{ }\KeywordTok{c}\NormalTok{(}\DataTypeTok{R=}\DecValTok{1}\NormalTok{,}\DataTypeTok{L=}\DecValTok{0}\NormalTok{,}\DataTypeTok{O=}\DecValTok{0}\NormalTok{,}\DataTypeTok{FF=}\DecValTok{0}\NormalTok{,}\DataTypeTok{B=}\DecValTok{0}\NormalTok{,}\DataTypeTok{R2=}\DecValTok{0}\NormalTok{)}
-  \NormalTok{tm =}\StringTok{ }\KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{,mxT,}\DataTypeTok{by=}\NormalTok{dt)}
+\NormalTok{MBDETES_R2R_solve =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR, }\DataTypeTok{mxT=}\DecValTok{20}\NormalTok{, }\DataTypeTok{dt=}\FloatTok{0.001}\NormalTok{)\{}
+\NormalTok{  inits =}\StringTok{ }\KeywordTok{c}\NormalTok{(}\DataTypeTok{R=}\DecValTok{1}\NormalTok{,}\DataTypeTok{L=}\DecValTok{0}\NormalTok{,}\DataTypeTok{O=}\DecValTok{0}\NormalTok{,}\DataTypeTok{FF=}\DecValTok{0}\NormalTok{,}\DataTypeTok{B=}\DecValTok{0}\NormalTok{,}\DataTypeTok{R2=}\DecValTok{0}\NormalTok{)}
+\NormalTok{  tm =}\StringTok{ }\KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{,mxT,}\DataTypeTok{by=}\NormalTok{dt)}
   \KeywordTok{data.frame}\NormalTok{(}\KeywordTok{lsoda}\NormalTok{(inits,tm,MBDETES_R2R_ODE,PAR,}\DataTypeTok{atol=}\FloatTok{1e-10}\NormalTok{))}
 \NormalTok{\}}
 \NormalTok{R2R=}\KeywordTok{MBDETES_R2R_solve}\NormalTok{(PAR)}
@@ -449,9 +451,9 @@ We can check this out by giving some reasonable times:
 \begin{Highlighting}[]
 \NormalTok{R2=R2R[,}\DecValTok{7}\NormalTok{]}
 \NormalTok{tt=R2R[,}\DecValTok{1}\NormalTok{]}
-\NormalTok{highSum=}\KeywordTok{sum}\NormalTok{(}\KeywordTok{diff}\NormalTok{(R2)*tt[-}\DecValTok{1}\NormalTok{])/}\KeywordTok{max}\NormalTok{(R2)}
-\NormalTok{lowSum=}\KeywordTok{sum}\NormalTok{(}\KeywordTok{diff}\NormalTok{(R2)*tt[-}\KeywordTok{length}\NormalTok{(tt)])/}\KeywordTok{max}\NormalTok{(R2)}
-\NormalTok{(lowSum+highSum)/}\DecValTok{2}
+\NormalTok{highSum=}\KeywordTok{sum}\NormalTok{(}\KeywordTok{diff}\NormalTok{(R2)}\OperatorTok{*}\NormalTok{tt[}\OperatorTok{-}\DecValTok{1}\NormalTok{])}\OperatorTok{/}\KeywordTok{max}\NormalTok{(R2)}
+\NormalTok{lowSum=}\KeywordTok{sum}\NormalTok{(}\KeywordTok{diff}\NormalTok{(R2)}\OperatorTok{*}\NormalTok{tt[}\OperatorTok{-}\KeywordTok{length}\NormalTok{(tt)])}\OperatorTok{/}\KeywordTok{max}\NormalTok{(R2)}
+\NormalTok{(lowSum}\OperatorTok{+}\NormalTok{highSum)}\OperatorTok{/}\DecValTok{2}
 \end{Highlighting}
 \end{Shaded}
 
@@ -461,9 +463,9 @@ We can check this out by giving some reasonable times:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{R2R_pdf =}\StringTok{ }\KeywordTok{diff}\NormalTok{(R2)/}\KeywordTok{max}\NormalTok{(R2)}
-\NormalTok{tt_pdf =}\StringTok{ }\NormalTok{(tt[-}\DecValTok{1}\NormalTok{]+tt[-}\KeywordTok{length}\NormalTok{(tt)])/}\DecValTok{2}
-\NormalTok{ix =}\StringTok{ }\KeywordTok{which}\NormalTok{(tt_pdf<}\DecValTok{5}\NormalTok{)}
+\NormalTok{R2R_pdf =}\StringTok{ }\KeywordTok{diff}\NormalTok{(R2)}\OperatorTok{/}\KeywordTok{max}\NormalTok{(R2)}
+\NormalTok{tt_pdf =}\StringTok{ }\NormalTok{(tt[}\OperatorTok{-}\DecValTok{1}\NormalTok{]}\OperatorTok{+}\NormalTok{tt[}\OperatorTok{-}\KeywordTok{length}\NormalTok{(tt)])}\OperatorTok{/}\DecValTok{2}
+\NormalTok{ix =}\StringTok{ }\KeywordTok{which}\NormalTok{(tt_pdf}\OperatorTok{<}\DecValTok{5}\NormalTok{)}
 \KeywordTok{plot}\NormalTok{(tt_pdf[ix], R2R_pdf[ix], }\DataTypeTok{type =} \StringTok{"l"}\NormalTok{, }\DataTypeTok{xlab =} \StringTok{"Time (Days)"}\NormalTok{, }\DataTypeTok{ylab =} \StringTok{"Feeding Cycle Duration"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
@@ -472,31 +474,31 @@ We can check this out by giving some reasonable times:
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{MBDETES_cohort_ODE =}\StringTok{ }\NormalTok{function(t,X,P)\{}\KeywordTok{with}\NormalTok{(}\KeywordTok{as.list}\NormalTok{(}\KeywordTok{c}\NormalTok{(P,X)),\{}
-  \NormalTok{dF =}\StringTok{ }\NormalTok{P_RF*R/tR +}\StringTok{ }\NormalTok{P_OF*O/tO +}\StringTok{ }\NormalTok{P_BF*B/tB -}\StringTok{ }\NormalTok{(}\DecValTok{1}\NormalTok{-P_FF)*FF/tF}
-  \NormalTok{dB =}\StringTok{ }\NormalTok{P_RB*R/tR +}\StringTok{ }\NormalTok{P_OB*O/tO +}\StringTok{ }\NormalTok{P_FB*FF/tF -}\StringTok{ }\NormalTok{(}\DecValTok{1}\NormalTok{-P_BB)*B/tB}
-  \NormalTok{dR =}\StringTok{ }\NormalTok{P_BR*B/tB-R/tR}
-  \NormalTok{dL =}\StringTok{ }\NormalTok{P_RL*R/tR +}\StringTok{ }\NormalTok{P_OL*O/tO -}\StringTok{ }\NormalTok{(}\DecValTok{1}\NormalTok{-P_LL)*L/tL}
-  \NormalTok{dO =}\StringTok{ }\NormalTok{P_RO*R/tR +}\StringTok{ }\NormalTok{P_LO*L/tL -}\StringTok{ }\NormalTok{(}\DecValTok{1}\NormalTok{-P_OO)*O/tO}
-  \NormalTok{dOO =}\StringTok{ }\NormalTok{(P_OF +}\StringTok{ }\NormalTok{P_OB)*O/tO}
-  \NormalTok{dRR =}\StringTok{ }\NormalTok{P_BR*B/tB }
+\NormalTok{MBDETES_cohort_ODE =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(t,X,P)\{}\KeywordTok{with}\NormalTok{(}\KeywordTok{as.list}\NormalTok{(}\KeywordTok{c}\NormalTok{(P,X)),\{}
+\NormalTok{  dF =}\StringTok{ }\NormalTok{P_RF}\OperatorTok{*}\NormalTok{R}\OperatorTok{/}\NormalTok{tR }\OperatorTok{+}\StringTok{ }\NormalTok{P_OF}\OperatorTok{*}\NormalTok{O}\OperatorTok{/}\NormalTok{tO }\OperatorTok{+}\StringTok{ }\NormalTok{P_BF}\OperatorTok{*}\NormalTok{B}\OperatorTok{/}\NormalTok{tB }\OperatorTok{-}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_FF)}\OperatorTok{*}\NormalTok{FF}\OperatorTok{/}\NormalTok{tF}
+\NormalTok{  dB =}\StringTok{ }\NormalTok{P_RB}\OperatorTok{*}\NormalTok{R}\OperatorTok{/}\NormalTok{tR }\OperatorTok{+}\StringTok{ }\NormalTok{P_OB}\OperatorTok{*}\NormalTok{O}\OperatorTok{/}\NormalTok{tO }\OperatorTok{+}\StringTok{ }\NormalTok{P_FB}\OperatorTok{*}\NormalTok{FF}\OperatorTok{/}\NormalTok{tF }\OperatorTok{-}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_BB)}\OperatorTok{*}\NormalTok{B}\OperatorTok{/}\NormalTok{tB}
+\NormalTok{  dR =}\StringTok{ }\NormalTok{P_BR}\OperatorTok{*}\NormalTok{B}\OperatorTok{/}\NormalTok{tB}\OperatorTok{-}\NormalTok{R}\OperatorTok{/}\NormalTok{tR}
+\NormalTok{  dL =}\StringTok{ }\NormalTok{P_RL}\OperatorTok{*}\NormalTok{R}\OperatorTok{/}\NormalTok{tR }\OperatorTok{+}\StringTok{ }\NormalTok{P_OL}\OperatorTok{*}\NormalTok{O}\OperatorTok{/}\NormalTok{tO }\OperatorTok{-}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_LL)}\OperatorTok{*}\NormalTok{L}\OperatorTok{/}\NormalTok{tL}
+\NormalTok{  dO =}\StringTok{ }\NormalTok{P_RO}\OperatorTok{*}\NormalTok{R}\OperatorTok{/}\NormalTok{tR }\OperatorTok{+}\StringTok{ }\NormalTok{P_LO}\OperatorTok{*}\NormalTok{L}\OperatorTok{/}\NormalTok{tL }\OperatorTok{-}\StringTok{ }\NormalTok{(}\DecValTok{1}\OperatorTok{-}\NormalTok{P_OO)}\OperatorTok{*}\NormalTok{O}\OperatorTok{/}\NormalTok{tO}
+\NormalTok{  dOO =}\StringTok{ }\NormalTok{(P_OF }\OperatorTok{+}\StringTok{ }\NormalTok{P_OB)}\OperatorTok{*}\NormalTok{O}\OperatorTok{/}\NormalTok{tO}
+\NormalTok{  dRR =}\StringTok{ }\NormalTok{P_BR}\OperatorTok{*}\NormalTok{B}\OperatorTok{/}\NormalTok{tB }
   \KeywordTok{list}\NormalTok{(}\KeywordTok{c}\NormalTok{(dF,dB,dR,dL,dO,dOO,dRR))}
 \NormalTok{\})\}}
 
-\NormalTok{MBDETES_cohort_solve =}\StringTok{ }\NormalTok{function(PAR, }\DataTypeTok{pF=}\DecValTok{1}\NormalTok{, }\DataTypeTok{mxT=}\DecValTok{100}\NormalTok{, }\DataTypeTok{dt=}\FloatTok{0.001}\NormalTok{)\{}
-  \NormalTok{inits =}\StringTok{ }\KeywordTok{c}\NormalTok{(}\DataTypeTok{FF=}\NormalTok{pF,}\DataTypeTok{B=}\DecValTok{1}\NormalTok{-pF,}\DataTypeTok{R=}\DecValTok{0}\NormalTok{,}\DataTypeTok{L=}\DecValTok{0}\NormalTok{,}\DataTypeTok{O=}\DecValTok{0}\NormalTok{,}\DataTypeTok{OO=}\DecValTok{0}\NormalTok{,}\DataTypeTok{RR=}\DecValTok{0}\NormalTok{)}
-  \NormalTok{tm =}\StringTok{ }\KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{,mxT,}\DataTypeTok{by=}\NormalTok{dt)}
+\NormalTok{MBDETES_cohort_solve =}\StringTok{ }\ControlFlowTok{function}\NormalTok{(PAR, }\DataTypeTok{pF=}\DecValTok{1}\NormalTok{, }\DataTypeTok{mxT=}\DecValTok{100}\NormalTok{, }\DataTypeTok{dt=}\FloatTok{0.001}\NormalTok{)\{}
+\NormalTok{  inits =}\StringTok{ }\KeywordTok{c}\NormalTok{(}\DataTypeTok{FF=}\NormalTok{pF,}\DataTypeTok{B=}\DecValTok{1}\OperatorTok{-}\NormalTok{pF,}\DataTypeTok{R=}\DecValTok{0}\NormalTok{,}\DataTypeTok{L=}\DecValTok{0}\NormalTok{,}\DataTypeTok{O=}\DecValTok{0}\NormalTok{,}\DataTypeTok{OO=}\DecValTok{0}\NormalTok{,}\DataTypeTok{RR=}\DecValTok{0}\NormalTok{)}
+\NormalTok{  tm =}\StringTok{ }\KeywordTok{seq}\NormalTok{(}\DecValTok{0}\NormalTok{,mxT,}\DataTypeTok{by=}\NormalTok{dt)}
   \KeywordTok{data.frame}\NormalTok{(}\KeywordTok{lsoda}\NormalTok{(inits,tm,MBDETES_cohort_ODE,PAR,}\DataTypeTok{atol=}\FloatTok{1e-10}\NormalTok{))}
 \NormalTok{\}}
 \NormalTok{cohort=}\KeywordTok{MBDETES_cohort_solve}\NormalTok{(PAR,}\DataTypeTok{pF=}\NormalTok{.}\DecValTok{5}\NormalTok{,}\DataTypeTok{dt=}\FloatTok{0.01}\NormalTok{)}
 \NormalTok{tt=cohort[,}\DecValTok{1}\NormalTok{]}
-\NormalTok{alive =}\StringTok{ }\KeywordTok{rowSums}\NormalTok{(cohort[,}\DecValTok{2}\NormalTok{:}\DecValTok{6}\NormalTok{])}
+\NormalTok{alive =}\StringTok{ }\KeywordTok{rowSums}\NormalTok{(cohort[,}\DecValTok{2}\OperatorTok{:}\DecValTok{6}\NormalTok{])}
 \NormalTok{eggs =}\StringTok{ }\NormalTok{cohort[,}\DecValTok{7}\NormalTok{]}
 \NormalTok{bloodmeals =}\StringTok{ }\NormalTok{cohort[,}\DecValTok{8}\NormalTok{]}
 
-\NormalTok{highSum=-}\KeywordTok{sum}\NormalTok{(}\KeywordTok{diff}\NormalTok{(alive)*tt[-}\DecValTok{1}\NormalTok{])}
-\NormalTok{lowSum=-}\KeywordTok{sum}\NormalTok{(}\KeywordTok{diff}\NormalTok{(alive)*tt[-}\KeywordTok{length}\NormalTok{(tt)])}
-\NormalTok{(lowSum+highSum)/}\DecValTok{2}
+\NormalTok{highSum=}\OperatorTok{-}\KeywordTok{sum}\NormalTok{(}\KeywordTok{diff}\NormalTok{(alive)}\OperatorTok{*}\NormalTok{tt[}\OperatorTok{-}\DecValTok{1}\NormalTok{])}
+\NormalTok{lowSum=}\OperatorTok{-}\KeywordTok{sum}\NormalTok{(}\KeywordTok{diff}\NormalTok{(alive)}\OperatorTok{*}\NormalTok{tt[}\OperatorTok{-}\KeywordTok{length}\NormalTok{(tt)])}
+\NormalTok{(lowSum}\OperatorTok{+}\NormalTok{highSum)}\OperatorTok{/}\DecValTok{2}
 \end{Highlighting}
 \end{Shaded}
 
@@ -509,8 +511,8 @@ We can check this out by giving some reasonable times:
 \KeywordTok{par}\NormalTok{(}\DataTypeTok{mfrow=}\KeywordTok{c}\NormalTok{(}\DecValTok{2}\NormalTok{,}\DecValTok{2}\NormalTok{), }\DataTypeTok{mar =} \KeywordTok{c}\NormalTok{(}\DecValTok{5}\NormalTok{,}\DecValTok{4}\NormalTok{,}\DecValTok{2}\NormalTok{,}\DecValTok{2}\NormalTok{))}
 \KeywordTok{plot}\NormalTok{(tt, alive, }\DataTypeTok{type =} \StringTok{"l"}\NormalTok{, }\DataTypeTok{xlab =} \StringTok{"Age (days)"}\NormalTok{, }\DataTypeTok{ylab =} \StringTok{"Surviving"}\NormalTok{)}
 \CommentTok{#lines(tt, exp(-tt/9.78), col = "red")}
-\KeywordTok{plot}\NormalTok{(tt[-}\DecValTok{1}\NormalTok{], }\KeywordTok{diff}\NormalTok{(eggs), }\DataTypeTok{col =} \StringTok{"blue"}\NormalTok{, }\DataTypeTok{type =} \StringTok{"l"}\NormalTok{, }\DataTypeTok{xlab =} \StringTok{"Age (days)"}\NormalTok{, }\DataTypeTok{ylab=} \StringTok{"Laying Rate"}\NormalTok{)}
-\KeywordTok{plot}\NormalTok{(tt[-}\DecValTok{1}\NormalTok{], }\KeywordTok{diff}\NormalTok{(bloodmeals), }\DataTypeTok{col =} \StringTok{"red"}\NormalTok{, }\DataTypeTok{type =} \StringTok{"l"}\NormalTok{, }\DataTypeTok{xlab =} \StringTok{"Age (days)"}\NormalTok{, }\DataTypeTok{ylab =} \StringTok{"Feeding Rate"}\NormalTok{)}
+\KeywordTok{plot}\NormalTok{(tt[}\OperatorTok{-}\DecValTok{1}\NormalTok{], }\KeywordTok{diff}\NormalTok{(eggs), }\DataTypeTok{col =} \StringTok{"blue"}\NormalTok{, }\DataTypeTok{type =} \StringTok{"l"}\NormalTok{, }\DataTypeTok{xlab =} \StringTok{"Age (days)"}\NormalTok{, }\DataTypeTok{ylab=} \StringTok{"Laying Rate"}\NormalTok{)}
+\KeywordTok{plot}\NormalTok{(tt[}\OperatorTok{-}\DecValTok{1}\NormalTok{], }\KeywordTok{diff}\NormalTok{(bloodmeals), }\DataTypeTok{col =} \StringTok{"red"}\NormalTok{, }\DataTypeTok{type =} \StringTok{"l"}\NormalTok{, }\DataTypeTok{xlab =} \StringTok{"Age (days)"}\NormalTok{, }\DataTypeTok{ylab =} \StringTok{"Feeding Rate"}\NormalTok{)}
 \KeywordTok{plot}\NormalTok{(tt_pdf[ix], R2R_pdf[ix], }\DataTypeTok{type =} \StringTok{"l"}\NormalTok{, }\DataTypeTok{xlab =} \StringTok{"Time (days)"}\NormalTok{, }\DataTypeTok{ylab =} \StringTok{"Feeding Cycle Length"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
