--- a/MASH-dev/DanielCitron/TaR_FOI/Adjusted FOI Solution.Rmd
+++ b/MASH-dev/DanielCitron/TaR_FOI/Adjusted FOI Solution.Rmd
@@ -22,7 +22,7 @@ P.ij <- read.csv( "pij.csv",
                row.names = c("ban.area", "mal.area", "bas.area", "off", "ban", "lub", "mal", "mok", "ria", "ure"))
 P.ij <- P.ij[,2:11]
 ```
-
+Each row of `P.ij` represents a probability distribution - the amount of time spent distributed across the 10 different locations included in this example.
 
 Define vector of PR estimates
 ```{r Defining the PR Estimates}
@@ -55,12 +55,15 @@ In the areas associated with Malabo, empirical studies find that there really ar
 
 For the sake of this example, let's impose a few conditions on the two elements of $h$.  $h_2$ is the FOI associated with the example area in Malabo, so we might say the following:
 $$
-\frac{h_2}{h_1} \ge 100, \qquad \qquad \frac{h_2}{h_3} \ge 100
+\frac{h_1}{h_3} \ge 100, \qquad \qquad \frac{h_3}{h_2} \ge 100
 $$
 $h_7$ is the FOI asociated with the destination region of Malabo, so we might also say the following:
 $$
-h_7/((h_5 + h_6 + h_8 + h_9 + h_{10})/5) \ge 100
+\frac{h_5 + h_6 + h_8 + h_9 + h_{10}}{5}/h_7 \ge 100
 $$
+Note that the constants on the right hand sides of these inequalities are equal to 100, but in practice can be set according to HLC data.
+
+
 We have added two additional constraints to what the values of $h$ can be, so we also allow certain elements of $\psi$ to vary.  Currently, the $3\times3$ upper-left-hand block of $\psi$, representing the interactions between the three example areas, is defined like this:
 ```{r}
 P.ij[1:3, 1:3]
@@ -68,15 +71,35 @@ P.ij[1:3, 1:3]
 
 We want to adjust this to allow people in `mal.area` to move around to `ban.area` and `bas.area`:
 $$
-  \psi_{adj} = \left( {\begin{array}{ccc}
+  \hat{\psi} = \left( {\begin{array}{ccc}
    0.9805047 & 0.0000000 & 0.0000000 \\
    \delta_1 & 0.9818041 - \delta_1 - \delta_2 & \delta_2 \\
     0.0000000 & 0.0000000 & 0.9867172 \\
   \end{array} } \right)
 $$
-Simultaneously, we need to have the rows of $\psi_{adj}$ remain normalized.
+Simultaneously, we need to have the rows of $\hat{\psi}$ remain normalized.
 
-Rearranging our model, we can solve for $\hat{X}$ and try to minimize the difference between it and $\vec{X}$, subject to the constraints we've added:
+## To summarize 
+
+We are left with 12 free parameters to fit:
+  
+  * $\delta_1$ and $\delta_2$, 2 parameters from $\hat{\psi}$ 
+  * $\vec{h}$, a 10-element vector
+  
+We have some constraints on these parameters.  We want to constrain $h_2$ and $h_7$ to be small compared to the other elements of $\vec{h}$
+
+  * $h_1 \ge 100 h_2$
+  * $h_3 \ge 100 h_2$
+  * $\frac{h_5 + h_6 + h_8 + h_9 + h_{10}}{5} \ge 100 h_7$
+
+There are also some constraints on $\delta_1$ and $\delta_2$, simply because each row of $\hat{\psi}$ represents a probability distribution.
+
+  * $0.9818041 - \delta_1 - \delta_2 \ge 0$
+  * $\delta_1 \ge 0$
+  * $\delta_2 \ge 0$
+  
+Re-arranging our model, we can solve for the _odds_ of being PR positive:
 $$
-\hat{X} = \frac{\psi_{adj}\cdot h}{ r + \psi_{adj}\cdot h}
+r \frac{\hat{X}}{1 - \hat{X}} = \hat{\psi} \cdot \vec{h}
 $$
+Our objective is to find $\hat{X}$ that comes as close to possible to estimating our PR estimates $\vec{X}$.
