start working on changes in mean by landscape

--- a/MASH-Docs/TaR.Rmd
+++ b/MASH-Docs/TaR.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "TaR"
 author: "David L Smith"
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
 ---
 ## Time at Risk (TaR)
 
